--- a/css/main.css
+++ b/css/main.css
@@ -1,45 +1,393 @@
-/*Custom CSS for some elements*/
-
 html {
-	scroll-behavior: smooth;
+  line-height: 1.6;
+  -webkit-text-size-adjust: 100%;
+  scroll-behavior: smooth;
+}
+
+:root {
+	--main-transition: all .5s;
+	--default-padding: 1em;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 body {
-	font-family: "Spartan", sans-serif;
+	font-family: "DM Sans", sans-serif;
+  margin: 0;
+	color: #555;
+	text-rendering: optimizeLegibility;
+	font-size: 1em;
 }
 
-.decoration-primary {
+main {
+  display: block;
+}
+
+h1 {
+  font-size: 2.5em;
+  margin: 0.67em 0;
+}
+
+h2 {
+	font-size: 2.2em;
+	font-weight: 500;
+}
+
+h3 {
+	font-size: 1.5em;
+}
+
+p {
+	font-size: 1.3em;
+}
+
+h1, h2, h3 {
+  color: #222;
+}
+
+hr {
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+}
+
+pre {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+a {
+  background-color: transparent;
+	color: #222;
+	text-decoration: none;
+}
+
+abbr[title] {
+  border-bottom: none;
+  text-decoration: underline;
+  text-decoration: underline dotted;
+}
+
+b,
+strong {
+  font-weight: bolder;
+  color: #222;
+}
+
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+small {
+  font-size: 80%;
+}
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+img {
+  border-style: none;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+
+button,
+input {
+  overflow: visible;
+}
+
+button,
+select {
+  text-transform: none;
+}
+
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+legend {
+  box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0; /* 3 */
+  white-space: normal;
+}
+
+progress {
+  vertical-align: baseline;
+}
+
+textarea {
+  overflow: auto;
+}
+
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box;
+  padding: 0;
+}
+
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+[type="search"] {
+  -webkit-appearance: textfield;
+  outline-offset: -2px;
+}
+
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit;
+}
+
+details,
+.block {
+  display: block !important;
+}
+
+summary {
+  display: list-item;
+}
+
+template {
+  display: none;
+}
+
+[hidden] {
+  display: none;
+}
+
+/*Components*/
+
+.link-button{
+	border: 1px solid  #A4EAEA;
+	padding: 6px;
+  cursor: pointer;
+  border-radius: 6px;
+}
+
+.link-button:hover{
+	background:  #A4EAEA;
+	transition: var(--main-transition);
+}
+
+.design-tag {
+	background: #A4EAEA;
+	padding: var(--default-padding);
+}
+
+.code-tag {
+	background: #657DF6;
+	padding: var(--default-padding);
+}
+
+.contact-title {
+	text-decoration: underline;
+}
+
+.decoration {
+	display: inline-block;
 	position: relative;
+  z-index: 0;
 }
 
-.decoration-primary::after {
-	content: '';
-	display: block;
-	border: 5px solid #00d1b2;
+.decoration:after {
+  content: "";
+  position: absolute;
+  height: 12px;
+  width: 100%;
+  left: 0;
+  bottom: 12px;
+  z-index: -1;
+  background: #A4EAEA;
+}
+
+/*General*/
+.container {
+	max-width: 1200px;
+	margin: 0 auto;
+}
+
+.section {
+	padding: 2em 1.5em;
+}
+
+.row,
+.flex {
+	display: flex;
+	display: -webkit-flex;
+	flex-direction: row;
+}
+
+.line,
+.projet {
+  flex: 1;
+}
+
+.row {
+  justify-content: center;
+}
+.flex {
+	justify-content: space-between;
+}
+
+.navlink {
+	list-style: none;
+	padding: var(--default-padding);
+	font-size: 1.3em;
+}
+
+.ps {
+  font-size: 1em;
+}
+
+.projet {
+	margin: 0.5em;
+	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  padding: 0.5em;
+  border-radius: 0.5em;
+  transition: var(--main-transition);
+}
+
+.projet p {
+	font-size: inherit;
+}
+
+.en-gras {
+  font-weight: bold;
+}
+
+.rotate {
+  transition: var(--main-transition);
+}
+
+.rotate:hover {
+  transform: rotateY(180deg);
+}
+
+.navlink:hover .github path {
+  fill: black;
+  transition: var(--main-transition);
+}
+
+.presentation {
+  max-width: 36em;
+}
+
+.tool-tip {
+	float: right;
+	border: 1px solid;
+	border-radius: 50%;
+	width: 18px;
+	height: 18px;
+	margin: 0 5px;
+	text-align: center;
+	cursor: pointer;
+	font-size: 14px;
+	line-height: 15px;
+  position: relative;
+  color: #222;
+}
+
+.tool-tip-text {
 	position: absolute;
+	visibility: hidden;
+	bottom: 100%;
+	right: 0;
+	border: 1px solid #eee;
+	padding: 0.5em;
+	width: 16em;
+	background: #ededed;
+	line-height: initial;
+  border-radius: 0.5em;
+}
+
+.tool-tip:hover .tool-tip-text {
+	visibility: visible;
+}
+
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	padding-top: 2em;
+	left: 0;
+	top: 0;
 	width: 100%;
-	bottom: -6px;
-	border-radius: 1em
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.9);
 }
 
-.decoration-second {
-	position: relative;
-}
-
-.decoration-second::after {
-	content: '';
+.modal img {
 	display: block;
-	border: 5px solid #dbba58;
+	margin: 0 auto;
+  transition: var(--main-transition);
+}
+
+.close {
+	color: #fff;
 	position: absolute;
-	width: 100%;
-	bottom: -6px;
-	border-radius: 1em
-}
-
-.skew-block {
-	transform: skewY(-12deg);
-}
-
-.skew-text {
-	transform: skewY(12deg);
+	top: 1em;
+	right: 20px;
+	font-size: 2.2em;
+  cursor: pointer;
 }
