--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ html {
 body {
 	font-family: "DM Sans", sans-serif;
   margin: 0;
-	color: #555;
+	color: #333;
 	text-rendering: optimizeLegibility;
 	font-size: 1em;
 }
@@ -40,7 +40,7 @@ h3 {
 }
 
 p {
-	font-size: 1.3em;
+	font-size: 1.4em;
 }
 
 h1, h2, h3 {
@@ -294,9 +294,6 @@ template {
   flex: 0 31%;
 }
 
-.row {
-  justify-content: center;
-}
 .flex {
 	justify-content: space-between;
 }
@@ -397,6 +394,7 @@ template {
 
 .design {
   cursor: pointer;
+  border: 1px solid #A4EAEA
 }
 
 .close {
