--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-	font-family: "DM Sans", sans-serif;
+	font-family: "DM sans", Helvetica, sans-serif;
   margin: 0;
 	color: #333;
 	text-rendering: optimizeLegibility;
@@ -25,13 +25,8 @@ main {
   display: block;
 }
 
-h1 {
-  font-size: 2.5em;
-  margin: 0.67em 0;
-}
-
-h2 {
-	font-size: 2.2em;
+h1, h2 {
+	font-size: 2.5em;
 	font-weight: 500;
 }
 
@@ -40,7 +35,7 @@ h3 {
 }
 
 p {
-	font-size: 1.4em;
+	font-size: 1.5em;
 }
 
 h1, h2, h3 {
@@ -245,30 +240,15 @@ template {
 }
 
 .decoration {
-	display: inline-block;
-	position: relative;
-  z-index: 0;
-}
-
-.decoration:after {
-  content: "";
-  position: absolute;
-  height: 12px;
-  width: 100%;
-  left: 0;
-  bottom: 12px;
-  z-index: -1;
-  background: #A4EAEA;
+  color: #A4EAEA;
 }
 
 /*General*/
+
+
 .container {
 	max-width: 1200px;
 	margin: 0 auto;
-}
-
-.logo {
-	width: 25%;
 }
 
 .section {
@@ -290,12 +270,9 @@ template {
   flex: 1;
 }
 
-.projet {
-  flex: 0 31%;
-}
-
 .flex {
 	justify-content: space-between;
+  align-items: center;
 }
 
 .navlink {
@@ -304,33 +281,28 @@ template {
 	font-size: 1.3em;
 }
 
-.ps {
-  font-size: 1em;
-}
-
 .projet {
-	margin: 0.5em;
+	margin: 0.6em;
 	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   padding: 0.5em;
-  border-radius: 0.5em;
+  border-radius: 5px;
   transition: var(--main-transition);
+  flex: 0 31%;
+  min-height: 300px;
 }
 
-.projet p {
-	font-size: inherit;
+.projet p, .ps {
+	font-size: 1.2em;
 }
 
 .en-gras {
   font-weight: bold;
 }
 
-.rotate {
+.image, .image_div {
   transition: var(--main-transition);
 }
 
-.rotate:hover {
-  transform: rotateY(180deg);
-}
 
 .navlink:hover .github path {
   fill: black;
@@ -392,9 +364,8 @@ template {
   transition: var(--main-transition);
 }
 
-.design {
+.design, .close {
   cursor: pointer;
-  border: 1px solid #A4EAEA
 }
 
 .close {
@@ -403,7 +374,6 @@ template {
 	top: 1em;
 	right: 20px;
 	font-size: 2em;
-  cursor: pointer;
 }
 
 .navbar {
@@ -421,6 +391,7 @@ template {
 
   .logo {
 	   width: 100%;
+	  padding: 2em 1.5em;
   }
 
   .navbar {
