--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+
 html {
   line-height: 1.6;
   -webkit-text-size-adjust: 100%;
@@ -38,7 +40,7 @@ p {
 	font-size: 1.35em;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
   color: #222;
   margin: 0;
 }
