--- a/css/main.css
+++ b/css/main.css
@@ -500,6 +500,11 @@ template {
   display: none;
 }
 
+iframe {
+	max-width: 100%;
+	/* max-height: 100%; */
+}
+
 /*Responsive*/
 @media (min-width: 992px) {
   #toggle-menu {
@@ -517,4 +522,11 @@ template {
 	  display: block;
   }
 
+}
+
+@media screen and (max-width: 700px) {
+	.section {
+		padding-left: .5em;
+		padding-right: .5em;
+	}
 }
